# Project-Numerical-Analysis

./: README.md  pyproject.toml
scripts/: my_plot_fun.py  static_beam.py
test/: test_plotting.py
