[project]
authors = [{name = "jiachengxu", email = "xujiacheng1016@hotmail.com"}]
dependencies = []
name = "Project-Numerical-Analysis"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
project_numerical_analysis = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
numpy = ">=2.3.0,<3"
sympy = ">=1.14.0,<2"
matplotlib = ">=3.10.3,<4"
